Changed website heading

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
             class="d-flex flex-column justify-content-center align-items-center text-white h-100"
             style="min-height: 100vh; padding-top: 4em; padding-bottom: 4em"
           >
-            <h1>Eggs By The Dozen</h1>
+            <h1>Automated Fecal Egg Count</h1>
             <form action="/" method="POST" enctype="multipart/form-data">
               <input
                 type="file"
