--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eggs By The Dozen</title>
+    <title>Automated Fecal Egg Count</title>
     <link rel="icon" type="image/x-icon" href="../static/images/favicon.ico" />
 
     <!-- Bootstrap 5 -->
